// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomMetricsDetailsPanel /> renders customMetrics detailsPanel 1`] = `
<styled.div
  id="dtpanel-custom-metrics"
>
  Mock Child
</styled.div>
`;

exports[`<CustomMetricsDetailsPanel /> renders customMetrics detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-custom-metrics"
>
  <React.Fragment>
    <Detail
      label="Name"
      value="SLA"
    />
    <Detail
      label="Description"
      value="Test"
    />
    <Detail
      label="Custom Metric Type"
      value="SLA"
    />
    <Detail
      label="Status"
      value="Enabled"
    />
    <Detail
      label="SLA Threshold"
      value="20"
    />
    <Detail
      label="SLA Abandon Type"
      value="ignored-abandoned-calls"
    />
    <Detail
      label="SLA Abandon Threshold"
      value="20"
    />
  </React.Fragment>
</styled.div>
`;

exports[`<CustomMetricsDetailsPanel /> renders customMetrics detailsPanel with no update permision and active disabled 1`] = `
<styled.div
  id="dtpanel-custom-metrics"
>
  <React.Fragment>
    <Detail
      label="Name"
      value="SLA"
    />
    <Detail
      label="Description"
      value="Test"
    />
    <Detail
      label="Custom Metric Type"
      value="SLA"
    />
    <Detail
      label="Status"
      value="Disabled"
    />
    <Detail
      label="SLA Threshold"
      value="20"
    />
    <Detail
      label="SLA Abandon Type"
      value="ignored-abandoned-calls"
    />
    <Detail
      label="SLA Abandon Threshold"
      value="20"
    />
  </React.Fragment>
</styled.div>
`;
